# sps_insert

./: .gitignore  Cargo.toml  credentials.json.secret  go.mod  go.sum  main.go
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
src/: main.rs  outputs.rs  write_sps.rs
