[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tracing-actix-web = { version = "0.7.7", features = ["opentelemetry_0_19"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

opentelemetry = { version = "0.20", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.21" }
tracing-bunyan-formatter = "0.3"
serde = {version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
actix-web-httpauth = "0.8.1"
reqwest = {version = "0.11.22", features = ["json", "serde_json"]}
serde_json = "1.0.107"
